--- a/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
+++ b/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
@@ -2762,7 +2762,7 @@ Remaining data includes data that has been rolled over from the previous month."
   <string name="unlock_set_unlock_password_title">Heslo</string>
   <string name="unlock_set_unlock_pattern_summary">Spojte alespoň 4 body</string>
   <string name="unlock_set_unlock_pattern_title">Vzor</string>
-  <string name="unlock_set_unlock_pin_summary">Zadejte 4 čísla</string>
+  <string name="unlock_set_unlock_pin_summary">4-16 číselný pin</string>
   <string name="unlock_set_unlock_pin_title">PIN</string>
   <string name="updating_diagnostic_botton">Analyzování dat...</string>
   <string name="usage_sorted_activity_lable">Spotřeba dat</string>
@@ -2960,4 +2960,38 @@ Remaining data includes data that has been rolled over from the previous month."
   <string name="title_first_aid_kit">První pomoc</string>
   <string name="title_like">Líbí se mi</string>
   <string name="title_reply">Komentář</string>
+  <string name="auto_task_result_summary_text">Nastavte automatické úlohy pro Úsporu baterie</string>
+  <string name="extreme_power_save_mode_card_summary">Povolte Extrémní režim pro šetření baterie při slabé baterii.</string>
+  <string name="handle_title_abnormal">Vybíjení baterie</string>
+  <string name="handle_title_app">Aplikace</string>
+  <string name="handle_title_details">Využití baterie</string>
+  <string name="handle_title_system">Využití baterie systémem</string>
+  <string name="hide_mode_result_summary_text">Upravte nastavení aplikací pro úsporu baterie</string>
+  <string name="pc_main_activity_back">Zpět</string>
+  <string name="pc_settings_title">Nastavení úspory baterie</string>
+  <string name="power_center_hints_scan_danger_result">Můžete opravit problémy s baterií</string>
+  <string name="power_center_list_item_auto_brightness">Nastavte automatický jas displeje</string>
+  <string name="power_center_list_item_close_bluetooth">Vypnout Bluetooth</string>
+  <string name="power_center_list_item_deep_save_title">Další nastavení</string>
+  <string name="power_center_list_item_set_lockscreen_time">Vypnout displej po 30s nečinnosti</string>
+  <string name="power_center_scan_item_title_GPS">Upravit přesnost GPS</string>
+  <string name="power_center_scan_item_title_abnormal">Problémy s baterií</string>
+  <string name="power_center_scan_item_title_abnormal_apps">Neobvyklá spotřeba baterie</string>
+  <string name="power_center_scan_item_title_auto_invoke">Řetězové spuštění</string>
+  <string name="power_center_scan_item_title_auto_start">Autostart</string>
+  <string name="power_center_scan_item_title_battery_details">Podrobnosti spotřeby baterie</string>
+  <string name="power_center_scan_item_title_brightness">Upravit jas displeje</string>
+  <string name="power_center_scan_item_title_clean_memory">Vyčistit RAM</string>
+  <string name="power_center_scan_item_title_hide">Spravovat využití baterie</string>
+  <string name="power_center_scan_item_title_power_saver">Povolit Úsporu baterie</string>
+  <string name="power_center_scan_item_title_running_app">Aplikace běžící na pozadí</string>
+  <string name="power_center_scan_result_safe">Žádné problémy s baterií</string>
+  <string name="power_center_stop_scan_title">Zastavit</string>
+  <string name="power_save_started_summary_text">Úspora baterie je zapnuta. Animace, synchronizace a aktivity na pozadí jsou omezeny.</string>
+  <string name="status_bar_settings_function_description">O této funkci</string>
+  <string name="status_bar_settings_user_fold_description1">Složka upozornění filtruje méně důležité upozornění a shromažďuje je ve společné složce.</string>
+  <string name="status_bar_settings_user_fold_description2">MIUI si zapamatuje, která upozornění otevíráte a podle toho rozpozná jejich prioritu.</string>
+  <string name="status_bar_settings_user_fold_description3" />
+  <string name="status_bar_settings_user_fold_disable">Vyp.</string>
+  <string name="status_bar_settings_user_fold_enable">Zap.</string>
 </resources>
