--- a/Czech/main/Browser.apk/res/values-cs/strings.xml
+++ b/Czech/main/Browser.apk/res/values-cs/strings.xml
@@ -1011,4 +1011,7 @@ Chcete opustit tuto stránku?"</string>
   <string name="data_traffic_stop">Ukončit</string>  
   <string name="pref_privacy_policy">Ochrana soukromí</string>
   <string name="data_traffic_goto">Spotřeba dat</string>
+  <string name="data_traffic_download_cancel">Zrušit</string>
+  <string name="data_traffic_download_prompt">Video může být staženo pouze přes Wi-Fi</string>
+  <string name="data_traffic_download_setting">Nastavení</string>  
 </resources>
