--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -8,6 +8,7 @@
   <string name="about_phone_enter_xiaomi_net">Learn more</string>
   <string name="about_settings">Informace o zařízení</string>
   <string name="about_settings_summary">Zobrazí právní informace, stav a verzi softwaru</string>
+  <string name="miui_master_clear_summary">Vymažou se všechna data v zařízení</string>
   <string name="ac_enable_summary">Pro otevření aplikací bude vyžadováno heslo</string>
   <string name="ac_enable_title">Uzamknout jednotlivé apl.</string>
   <string name="ac_privacy_mode_sum">Pro deaktivaci soukromého režimu vložte Vaše přístupové heslo</string>
