--- a/Czech/main/Browser.apk/res/values-cs/strings.xml
+++ b/Czech/main/Browser.apk/res/values-cs/strings.xml
@@ -1013,5 +1013,34 @@ Chcete opustit tuto stránku?"</string>
   <string name="data_traffic_goto">Spotřeba dat</string>
   <string name="data_traffic_download_cancel">Zrušit</string>
   <string name="data_traffic_download_prompt">Video může být staženo pouze přes Wi-Fi</string>
-  <string name="data_traffic_download_setting">Nastavení</string>  
+  <string name="data_traffic_download_setting">Nastavení</string> 
+  <string name="action_menu_text_bookmark_removed">Vymazat záložku</string>
+  <string name="action_menu_text_fullscreen_enter">Otevřít na celý displej</string>
+  <string name="action_menu_text_fullscreen_exit">Ukončit režim celého displeje</string>
+  <string name="action_text_all_select_bookmark">Vše</string>
+  <string name="action_text_all_select_bookmark_cancel">Odznačit</string>
+  <string name="action_text_change_textsize_bigger">Zvětšit písmo</string>
+  <string name="action_text_change_textsize_smaller">Změnšit písmo</string>
+  <string name="action_text_edit_bookmark_exit">Ukončit</string>
+  <string name="action_text_nightmode_change">Noční režim</string>
+  <string name="action_text_readmode_bookmark_add">Přidat záložku</string>
+  <string name="action_text_readmode_exit">Ukončit režim čtení</string>
+  <string name="action_text_readmode_more">Více</string>
+  <string name="action_text_readmode_theme_head">Nastavit pozadí</string>
+  <string name="action_text_theme_and_textsize_change">Nastavení písma a témy</string>
+  <string name="bookmark_deleted">Vymazat záložku</string>
+  <string name="bookmark_not_deleted">Nelze vymazat záložku</string>
+  <string name="bookmark_url_not_exisit">Tato adresa již byla vymazána</string>
+  <string name="nav_screen_tab_incognito_enter">Otevřít inkognito kartu</string>
+  <string name="nav_screen_tab_incognito_exit">Ukončit inkognito kartu</string>
+  <string name="page_hang_message">Stránka neodpovídá. Je zapotřebí restartovat Prohlížeč.</string>
+  <string name="page_hang_title">Stránka neodpovídá</string>
+  <string name="pref_download_setting">Nastavení stahování</string>
+  <string name="exit_browser_confirmation">Stiskněte znovu pro ukončení</string>
+  <string name="dialog_recovery_tabs_disc">Detekce nezavřených stránek</string>
+  <string name="dialog_recovery_tabs_title">Otevřít stránku před obnovením</string>
+  <string name="pref_checkbox_tab_restore">Znovu se neptat</string> 
+  <string name="data_monitor">Upozornění na spotřebu dat</string>
+  <string name="pref_tab_restore">Obnovit naposledy otevřenou stránku</string>
+  <string name="pref_slide_back_forward">Navigace posouváním prstu</string>
 </resources>
