--- a/Czech/main/Settings.apk/res/values-cs/strings.xml
+++ b/Czech/main/Settings.apk/res/values-cs/strings.xml
@@ -5444,4 +5444,44 @@ Nastavení zařízení může vyžadovat přenos nemalého množství dat."</str
   <string name="camera_rear">Zadní %s</string>
   <string name="device_camera">Fotoaparát</string>
   <string name="status_bar_settings_peek_notification_icon">Zobrazit ikony upozornění</string>
+  <string name="slider_app_open">Otevřít aplikaci</string>
+  <string name="slider_app_open_name">Otevřít %1$s</string>
+  <string name="slider_app_open_none">Žádnou</string>
+  <string name="slider_button_title">Změnit</string>
+  <string name="slider_choose_app">Vybrat aplikaci</string>
+  <string name="slider_game_tool_summary">Potáhnutím dolů zobrazíte dostupné zkratky během hry</string>
+  <string name="slider_game_tool_tilte">Zkratky během hraní</string>
+  <string name="slider_global_summary_app">Ptáhnutím dolů otevřete aplikaci</string>
+  <string name="slider_global_summary_drawer">Potáhněte dolů pro zobrazení zkratek</string>
+  <string name="slider_global_summary_selfie">Potáhněte nahoru pro selfie</string>
+  <string name="slider_global_title">Zkratka vysouvání</string>
+  <string name="slider_high_grade_summary">Ptáhnutím dolů vykonáte vybranou akci</string>
+  <string name="slider_high_grade_title">Další nastavení vysouvání</string>
+  <string name="slider_selfie">Zhotovot selfie</string>
+  <string name="slider_title">Nastavení vysouvání</string>
+  <string name="slider_title_jianghu">Warrior</string>
+  <string name="slider_title_jixie">Mechanics</string>
+  <string name="slider_title_keji">Hi-tech</string>
+  <string name="slider_title_lingdong">Intellect</string>
+  <string name="slider_title_zippo">Zapalovač</string>
+  <string name="slider_tool_drawer">Otevřít nástroje</string>
+  <string name="slider_tool_none">Žádná</string>
+  <string name="slider_tool_none_summary">Žádná přiřazená akce</string>
+  <string name="slider_video_tool_summary">Potáhnutím dolů zobrazíte dostupné zkratky v průběhu videa</string>
+  <string name="slider_video_tool_title">Zkratky videa</string>
+  <string name="slider_vocie_click_too_often">Příliš rychle! Počkejte 1-2 minuty a zkuste to znovu.</string>
+  <string name="slider_vocie_online_close">Zasunutí</string>
+  <string name="slider_vocie_online_default">Žádné</string>
+  <string name="slider_vocie_online_open">Vysunutí</string>
+  <string name="slider_vocie_online_title">Online zvuky</string>
+  <string name="slider_voice_summary">Přehrát zvuk při vysunutí nebo zasunutí displeje</string>
+  <string name="slider_voice_title">Zvuky</string>  
+  <string name="status_bar_settings_notification_style">Vzhled upozornění</string>
+  <string name="allow_device_id_access">Aplikace s identifikací zařízení</string>
+  <string name="device_id">Identifikace zařízení</string>
+  <string name="restore_device_id_content">Obnovit přizpůsobené doporučení</string>
+  <string name="restore_device_id_title">Obnovit identifikaci zařízení</string>
+  <string name="restore_dialog_content">Obnovení identifikace zařízení obnoví i vaše doporučení.</string>
+  <string name="restore_dialog_positive">Obnovit</string>
+  <string name="restore_dialog_title">Upozornění</string>
 </resources>
