--- a/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
+++ b/Czech/main/SecurityCenter.apk/res/values-cs/strings.xml
@@ -2997,4 +2997,5 @@ Remaining data includes data that has been rolled over from the previous month."
    <string name="card_main_deepclean_whatsapp_title">WhatsApp čistič</string>
   <string name="card_main_hwtest_title">Test hardware</string>
   <string name="menu_item_about_privacy_title">Ochrana soukromí</string>
+  <string name="ad_split_screen_title">Přepněte se do režimu celé obrazovky pro odemknutí</string>
 </resources>
