--- a/Czech/main/SoundRecorder.apk/res/values-cs/strings.xml
+++ b/Czech/main/SoundRecorder.apk/res/values-cs/strings.xml
@@ -155,4 +155,5 @@ Při použití mobilních dat se budou účtovat poplatky u operátora."</string
 Dotkněte se %s pro spuštění stahování po připojení k Wi-Fi"</string>
   <string name="wifi_recommended_title">Upozornění na spotřebu dat</string>
   <string name="record_format_preference_title">Formát nahrávání</string>
+  <string name="sound_source_summary_without_system_sounds">Použít mikrofon nebo ztišit zvuky</string>
 </resources>
